# projs

./: .editorconfig  .gitignore  projs-report.txt  projs.txt  projstree.txt  pyproject.toml
.doc-gen/: check-report.txt  config.yml  ignore-patterns.txt  manifest.fletch  manifest.yml
.doc-gen/.doc-gen/: ignore-patterns.txt  manifest.fletch
.doc-gen/.doc-gen/output/: project-tree.txt
.doc-gen/manifest-backups/: 20260319-145611-manifest.yml  20260321-111355-manifest.yml  20260322-183631-manifest.yml  20260325-092922-manifest.yml
.doc-gen/output/: .editorconfig.md  .gitignore.md  README.md.md  project-tree.txt  projs-report.txt.md  projs-tree.txt  projs.txt.md  projstree.txt.md  pyproject.toml.md
.doc-gen/output/.scratch/: 2026mar22-projs_logging_status.md.md
.doc-gen/output/docs/: architecture.md.md  config_changes.txt.md  fstree2026nar17.md.md  project_rules.md.md
.doc-gen/output/licenses/: Apache-2.0.txt.md  GPL-v3.txt.md  MIT.txt.md
.doc-gen/output/systemd/: projs-worker.service.md
.doc-gen/output/templates/: flutter-game.yaml.md  python-basic.yaml.md
.doc-gen/output/tests/: test_commands.py.md  test_manifest.py.md
.scratch/: 2026mar22-projs_logging_status.md
docs/: architecture.md  config_changes.txt  fstree2026nar17.md  project_rules.md
docs/images/: projs_gui_mockup.html
docs/yaml/: projs_menus_yaml_with_ide.txt
src/projs/: __init__.py  _setup.py  commands.py  config.py  creator.py  language_actions.py  launcher.py  main.py  manifest.py  menu_builder.py  modifier.py  projs_setup_module.py  prompts.py  tmux.py
src/projs/cli/: __init__.py  (+8 more)
(+69 files in other folders)
