[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projs"
version = "0.1.0"
description = "Project launcher and setup manager for homelab"
authors = [
    {name = "Frazzled", email = "user@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
projs = "projs.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
projs = ["data/*.yaml", "data/*.json", "data/language-actions/*.yaml"]